[package]
name = "kava"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
tao = "0.32.8"
tray-icon = "0.20.0"
windows = { version = "0.60.0", features = ["Win32_System_Power", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
windows-registry = "0.5.0"
windows-result = "0.3.1"
